--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rick & Morty</title>
   <link rel="stylesheet" href="/css/style.css">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+  <!-- Bootstrap CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-<body>
-  
+<body class="bg-light">
+  <h1 class="main-title">Rick & Morty</h1>
+  <main id="main-container">
+  </main>
+  <article id="template-card-desk" style="visibility:hidden">
+    <div class="card">
+      <img class="card-img-top card__img" src="https://rickandmortyapi.com/api/character/avatar/2.jpeg" alt="Sunset in the mountains"/>
+      <div class="px-6 py-4 card-title">
+        <p class="fw-bold mb-2 card__name"></p>
+        <p class="mb-2 card__specie text-info"></p>
+      </div>
+    </div>
+  </article>
+  <!-- Axios -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" type="text/javascript"></script>
 </body>
 </html>
